# social-therapy

./: .gitignore  .gitmodules  BBoard.cpp  BBoard.py  CMakeLists.txt  Makefile  Message.h  Message.py  README.md  SocialTherapy  User.cpp  User.h  User.py  main.py  test.txt
inc/: BBoard.h
social-therapy-mobile/: package-lock.json  package.json
src/: BBoard.cpp  CMakeLists.txt  Message.cpp  main.cpp
